# abis

./: .gitmodules  CMakeLists.txt  README.md  abis rest.sln  readme.txt
abis-rest-server/: AbisRest.h  ReadMe.txt  abis-rest-server.vcxproj  abis-rest-server.vcxproj.filters  compare.cpp  ebsclient.cpp  ebsclient.h  extract.cpp  fplibclient.cpp  fplibclient.h  imgutils.cpp  imgutils.h  main.cpp  restutils.cpp  restutils.h  search.cpp  stdafx.cpp  verify.h
abis-rest-server/finger/: bmp.cpp  bmp.h  fp_internal.h
config/: home.ini  setting.ini
img/: face.b64.json
nbis/: CMakeLists.txt
nbis/fet/: delfet.cpp  extrfet.cpp  lkupfet.cpp  nistcom.cpp  readfet.cpp  updatfet.cpp
nbis/include/: dataio.h  util.h
nbis/include/win32/: strings.h
nbis/ioutil/: filesize.cpp
nbis/wsq/: util.cpp
src/: AbisRest.h  BioTemplate.h  CMakeLists.txt  biocard.cpp  biocard.h  compare.cpp  compare.h  config.cpp  db.txt  dbclient.cpp  dbclient.h  ebsclient.cpp  ebsclient.h  echotest.cpp  echotest.h  extract.cpp  extract.h  fplibclient.cpp  fplibclient.h  imgutils.cpp  imgutils.h  liveclient.cpp  liveclient.h  main.cpp  rest_biocard.cpp  rest_biocard.h  rest_compare.cpp  rest_compare.h  rest_echo.cpp  rest_echo.h  rest_extract.cpp  rest_extract.h  rest_search.cpp  rest_search.h  rest_verify.cpp  rest_verify.h  restutils.cpp  restutils.h  search.cpp  search.h  (+2 more)
src/finger/: fp_internal.h  libfprint.h
src/live/: Live.h
test/: BOI_Left_ind.wsq  BOI_Right_ind.wsq  all_tmp_ids_for_bc.sql  all_tmps_for_bc.sql  biocard.postman_collection.json  compare.postman_collection.json  extract.postman_collection.json  f1.wsq  face.base64  face_tmps.json  find_bc_by_tmp.sql  finger.base64  finger11.vector  get_bc_by_gid.sql  get_face_seq.sql  insert_data.sql  search.postman_collection.json  search_face.sql  test.postman_collection.json  tmp_by_id.sql  verify.postman_collection.json
tst/: CMakeLists.txt  test.cpp
vc140/: abis-rest-server.sln  abis-rest-server.vcxproj  abis-rest-server.vcxproj.filters
vc140_home/: abis-rest-server.vcxproj  abis-rest-server.vcxproj.filters
vc140_work/: abis-rest-server.vcxproj  abis-rest-server.vcxproj.filters
